    - Custom attack groups by default have 20% chance to roll an interplanetary attack. 25% to build a base when they land.
    - Updated tip and trick for interplanetary attack.    
    - Added is_primitive flag to indicate an enemy force that does not run ERM logics.
    - Gleba pentapods is now under its own force.  But the ERM features don't apply to them.
    - Added support to create multiple forces under same mod.

  Changes:
    - Changed Factorio dependency to 2.0.34.
    - Added guerrilla tactic.  Some aerial enemies may retreat certain distance after each attack.
    - Changed target-able entities' is_military attribute to true. Those buildings will attract enemies when they are in the enemy's vision range. This is done to accommodate attack area command.
    - Added a list of "target-able entities" to Tip and trick - "Custom attack group".
    - Fixed corrupted roboport graphic.
    
  Bugfixes:
    - Fixed custom attack group is not using legendary tier on home planet.
    - Removed a workaround for unit command issue which fixed in Factorio 2.0.34. Ref: https://forums.factorio.com/viewtopic.php?t=118082
    - Removed a workaround for an issue that higher level base building group can't path to destination. Enemies no longer build its base upon arrival.
  
  Scripting:
    - Added remote_call('enemyracemanager','skip_roll_quality') for others to skip unit quality rolling when spawning ERM units.
    - Added remote_call('enemyracemanager','interplanetary_attack_ignore_planets', planet_name) for others to register a planet to the interplanetary attack ignore list.  If the planet doesn't have enemy, it's automatically in ignore list.   

---------------------------------------------------------------------------------------------------
Version: 2.0.21
Date: 2024-01-20

  Bugfixes:
    - Fixed army deployer cron job might not properly reload for an existing save after 2.0.17 changes.
    - Fixed explosive biter were not showing up.