@@ -61,10 +61,10 @@ function makeLevelSpawners(level, type)
         res[6] = { MOD_NAME .. "--big-cold-spitter--" .. level, { { 0.5, 0.0 }, { 1.0, 0.4 } } }
         res[7] = { MOD_NAME .. "--behemoth-cold-biter--" .. level, { { 0.8, 0.0 }, { 1.0, 0.3 } } }
         res[8] = { MOD_NAME .. "--behemoth-cold-spitter--" .. level, { { 0.85, 0.0 }, { 1.0, 0.3 } } }
-        res[9] = { MOD_NAME .. "--leviathan-cold-biter--" .. level, { { 0.9, 0.0 }, { 1.0, 0.03 } } }
-        res[10] = { MOD_NAME .. "--leviathan-cold-spitter--" .. level, { { 0.9, 0.0 }, { 1.0, 0.03 } } }
+        res[9] = { "leviathan-cold-biter", { { 0.9, 0.0 }, { 1.0, 0.03 } } }
+        res[10] = { "leviathan-cold-spitter", { { 0.9, 0.0 }, { 1.0, 0.03 } } }
         if not settings.startup["cb-disable-mother"].value then
-            res[11] = { MOD_NAME .. "--mother-cold-spitter--" .. level, { { 0.925, 0.0 }, { 1.0, 0.02 } } }
+            res[11] = { "mother-cold-spitter", { { 0.925, 0.0 }, { 1.0, 0.02 } } }
         end
         return res
     end)()
