@@ -76,18 +76,19 @@ for i = 1, max_level do
     data:extend({ makeLevelTurrets(i, "medium-explosive-worm-turret", 2) })
     data:extend({ makeLevelTurrets(i, "big-explosive-worm-turret", 5) })
     data:extend({ makeLevelTurrets(i, "behemoth-explosive-worm-turret", 8) })
-    data:extend({ makeLevelTurrets(i, "leviathan-explosive-worm-turret", 14) })
-
-    if not settings.startup["eb-disable-mother"].value then
-        data:extend({ makeLevelTurrets(i, "mother-explosive-worm-turret", 14) })
-    end
 end
 data.raw["turret"]["small-explosive-worm-turret"].autoplace = nil
 data.raw["turret"]["medium-explosive-worm-turret"].autoplace = nil
 data.raw["turret"]["big-explosive-worm-turret"].autoplace = nil
 data.raw["turret"]["behemoth-explosive-worm-turret"].autoplace = nil
-data.raw["turret"]["leviathan-explosive-worm-turret"].autoplace = nil
+data.raw["turret"]["leviathan-explosive-worm-turret"].autoplace = enemy_autoplace.enemy_worm_autoplace( {
+    probability_expression = "enemy_autoplace_base(16, 90000)",
+    force = FORCE_NAME
+})
 
 if data.raw["turret"]["mother-explosive-worm-turret"] then
-    data.raw["turret"]["mother-explosive-worm-turret"].autoplace = nil
+    data.raw["turret"]["mother-explosive-worm-turret"].autoplace = enemy_autoplace.enemy_worm_autoplace( {
+        probability_expression = "enemy_autoplace_base(24, 90000)",
+        force = FORCE_NAME
+    })
 end 
